# CommentsTgBot

./: README.txt  answers.yml  pyproject.toml  todo.txt
commentstgbot/: choice_main.py  loader.py  main.py
commentstgbot/apps/bot/filters/: admin_filters.py  common_menu_filters.py
commentstgbot/apps/bot/handlers/: common_menu.py
commentstgbot/apps/bot/handlers/admin_handlers/: admin_commands.py  bot_settings.py  customize_queue_.py  privilege_settings.py
commentstgbot/apps/bot/markups/: __init__.py  admin.py  bot_settings.py  customize_queue.py  privilege.py
commentstgbot/apps/bot/middleware/: auth_middleware.py
commentstgbot/apps/bot/utils/: admin_helpers.py  message_processes.py  queue_helpers.py  request_helpers.py
commentstgbot/apps/controller/: checker.py  classes.py  controller.py
commentstgbot/config/: answer.py  config.py  log_settings.py
commentstgbot/db/: db_main.py
tests/: test_commentstgbot.py
