[tool.poetry]
name = "CommentsTgBot"
version = "0.1.0"
description = ""
authors = ["Rasul Taimaskhanov <81189712+taimaskhanov11@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
pydantic = "^1.9.0"
loguru = "^0.6.0"
PyYAML = "^6.0"
APScheduler = "^3.9.1"
Telethon = {extras = ["cryptg"], version = "^1.24.0"}
subscribe = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
